Use more fluent approach for db api.
Bring a bunch of queries up to the current jpa standard approach.

Delete some methods that duplicated superclass methods.